# claude-code-camp-2026

./: .gitignore  .mcp.json  CLAUDE.md  _docs
.boukensha/: settings.yml
docs/: 0_preweek.md  README.md  boukensha_running_instructions.md  description_patch_journeys_english.md  explore_architectures.md  explore_extracs.md  explore_extracts.md  explore_extracts_german.md  todo_week0_d1.md  todo_week0_d3.md  todo_week1_d7.md  working_week1_d8.md
docs/plans/: 00_fortsetzen_hier.md  Claude Code Camp Agent Architecture - Baseline.json  boukensha_architecture_python.md  implementation_instructions_v2.md  umsetzung.md  umsetzung_v2.md  vorgaben.md  week0_dummy_level-and-skills.md
week0_explore/: CHALLENGES.md  HOW_TO_PLAY_GERMAN.md  run_session_test.sh
week0_explore/boukensha/: README.md  _test_agent_fix.py  pyproject.toml
week0_explore/boukensha/boukensha/: __init__.py  agent.py  cli.py  config.py  context.py  logger.py  mud.py  registry.py  repl.py  run_dsl.py
week0_explore/boukensha/boukensha/backends/: __init__.py  anthropic.py
week0_explore/boukensha/boukensha/tools/: __init__.py  base.py  mud_tools.py
week0_explore/boukensha/journeys/: erfahrung_durchlaeufe_v10.txt  erfahrung_durchlaeufe_v10_1.md  erfahrung_durchlaeufe_v3.md  erfahrung_durchlaeufe_v4.txt  erfahrung_durchlaeufe_v7.txt  erfahrungen_durchlaeufe_v1.txt  erfahrungen_durchlaeufe_v5.txt  erfahrungen_durchlaeufe_v6.txt  mud-journeys-2026-07-15_v10.md  mud-journeys-2026-07-15_v11.md  mud-journeys-2026-07-15_v2.md  mud-journeys-2026-07-15_v3.md  mud-journeys-2026-07-15_v4.md  mud-journeys-2026-07-15_v5.md  mud-journeys-2026-07-15_v6.md  mud-journeys-2026-07-15_v7.md  mud-journeys-2026-07-15_v8.md  mud-journeys-2026-07-15_v9.md  mud-journeys-2026-07-16_v1.md  mud-journeys-2026-07-16_v2.md  mud-journeys-2026-07-16_v3.md  mud-journeys-2026-07-18_v1.md  mud-journeys-2026-07-20_v1.md  test_pruefung.txt  trinken_essen_fido.txt
week0_explore/boukensha/log_viz/: server.py
week0_explore/boukensha/references/: commands.md
week0_explore/explore_architecture/: AGENTS.md  AGENTS_PROMPTING_INSTRUCTIONS.md  EXPLORATION.md
week0_explore/logs/: Anleitung_patch_journeys.md  mud-session-2026-07-12.md  short-agent-instruction-2026-07-15_2.md  short-agent-instruction-2026-07-15_2.txt
week0_explore/mud-mcp/: .gitignore  README.md
week0_explore/mud_manager/: mud_manager-0.1.0.gem
week1_baseline/: INTERACTIONS_GERMAN.md
week1_baseline/.boukensha/: settings.yml
week1_baseline/00_config/: pyproject.toml
week1_baseline/01_struct_skeleton/: README.md
week1_baseline/02_the_registry/: README.md  pyproject.toml
week1_baseline/03_prompt_builder/: plan.md  pyproject.toml
week1_baseline/04_api_client/: plan.md
week1_baseline/05_agent_loop/: pyproject.toml
week1_baseline/06_the_logger/: README.md  pyproject.toml
week1_baseline/07_the_run_dsl/: README.md  plan.md  pyproject.toml
week1_baseline/08_the_repl_loop/: README.de.md  (+2 more)
week1_baseline/10_standard_tool_library/: README.md  plan.md  pyproject.toml
week1_baseline/10_standard_tool_library/boukensha/: cli.py  config.py  prompt_builder.py
week1_baseline/10_standard_tool_library/boukensha/backends/: base.py
week1_baseline/mud-mcp/: .gitignore  README.md  credentials.example.json  pyproject.toml
week1_baseline/mud-mcp/mud_mcp/: __init__.py  session.py
week1_baseline/python/01_struct_skeleton/: README.md  pyproject.toml
week1_baseline/python/01_struct_skeleton/boukensha/: __init__.py  cli.py  config.py
week1_baseline/python/01_struct_skeleton/boukensha_struct_skeleton.egg-info/: PKG-INFO  SOURCES.txt
week1_baseline/python/01_struct_skeleton/examples/: example.py
week1_baseline/python/02_the_registry/: README.md  pyproject.toml
week1_baseline/python/02_the_registry/boukensha/: __init__.py  config.py  context.py  errors.py  message.py  registry.py  tool.py
week1_baseline/python/02_the_registry/examples/: example.py
week1_baseline/python/02_the_registry/tests/: test_registry.py
week1_baseline/python/03_prompt_builder/: README.md  pyproject.toml
week1_baseline/python/03_prompt_builder/boukensha/: __init__.py  config.py  context.py  errors.py  prompt_builder.py
week1_baseline/python/03_prompt_builder/boukensha/backends/: anthropic.py  mammouth.py  ollama_cloud.py  openai.py
week1_baseline/python/03_prompt_builder/examples/: example.py
week1_baseline/python/03_prompt_builder/tests/: test_prompt_builder.py
week1_baseline/python/05_agent_loop/: README.md  plan.md  pyproject.toml
week1_baseline/python/05_agent_loop/boukensha/: __init__.py  agent.py  cli.py  prompt_builder.py
week1_baseline/python/05_agent_loop/boukensha/backends/: anthropic.py  mammouth.py
week1_baseline/python/05_agent_loop/examples/: example.py
week1_baseline/python/05_agent_loop/tests/: test_run_step5.py
week1_baseline/python/08_the_repl_loop/: README.md  pyproject.toml
week1_baseline/python/08_the_repl_loop/boukensha/: __init__.py  cli.py  client.py  config.py  context.py  repl.py  version.py
week1_baseline/python/08_the_repl_loop/boukensha/backends/: gemini.py  ollama.py  openai.py
week1_baseline/python/08_the_repl_loop/examples/: example.py
week1_baseline/python/09_global_executable/: README.md  boukensha_loader.py  pyproject.toml
week1_baseline/python/09_global_executable/boukensha/: __init__.py  agent.py  errors.py  logger.py  prompt_builder.py  registry.py  repl.py  run_dsl.py  tool.py  version.py
week1_baseline/python/09_global_executable/boukensha/backends/: lmstudio.py
week1_baseline/python/09_global_executable/boukensha/tasks/: base.py  player.py
(+128 files in other folders)
