[project]
name = "boukensha"
version = "0.1.0"
description = "Boukensha (冒険者) — Player-Journey-Agent, der den tbaMUD selbstständig spielt (Python-Baseline)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",   # LLM-Backend (Claude)
    "pyyaml>=6.0",         # settings.yml
    "rich>=13.0",          # Text-UI (TUI)
    "mud-mcp",             # MudManager/Telnet-Session (wiederverwendet, s. [tool.uv.sources])
]

[project.optional-dependencies]
# log_viz (FastAPI) ist optional — nur nötig, um die JSONL-Logs im Browser zu betrachten.
logviz = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
# Entspricht dem Knoten "> bounkensha" im Architektur-Diagramm.
boukensha = "boukensha.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["boukensha"]

# MudManager wird aus dem bestehenden Python-Paket mud-mcp wiederverwendet
# (NICHT verändert) — als editierbare Pfad-Abhängigkeit eingebunden.
[tool.uv.sources]
mud-mcp = { path = "../mud-mcp", editable = true }
