[project]
name = "mud-mcp"
version = "0.1.0"
description = "MCP server exposing telnet control of the tbaMUD/CircleMUD server on localhost:4000"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
mud-mcp = "mud_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mud_mcp"]