[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boukensha-the-registry"
version = "0.0.1"
description = "Boukensha MUD agent -- Step 2: The Tool Registry (Python port)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["boukensha*"]

[tool.setuptools.package-data]
boukensha = ["py.typed"]
