[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boukensha-prompt-builder"
version = "0.0.1"
description = "Boukensha MUD agent -- Step 3: The Prompt Builder (Python port)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["boukensha*"]

[tool.setuptools.package-data]
boukensha = ["py.typed"]
